--- a/src/assets/css/station3.css
+++ b/src/assets/css/station3.css
@@ -13,8 +13,8 @@
 img {
   width: 288px;
   height: 182px;
-  margin-bottom: 0px;
+  margin-bottom: 1px;
 }
 .card {
-  margin: 10px;
+  padding-bottom: 10px;
 }
